--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.0",
     "autoprefixer": "^10.4.15",
+    "chart.js": "^4.4.0",
+    "faker": "5.5.3",
     "lucide-react": "^0.268.0",
     "postcss": "^8.4.28",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.15.0",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
+    "@types/faker": "5.5.9",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
