--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.0",
+    "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.15",
     "chart.js": "^4.4.0",
     "faker": "5.5.3",
@@ -21,11 +22,12 @@
     "react-dom": "^18.2.0",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.15.0",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.15",
     "@types/faker": "5.5.9",
+    "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
