--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material-tailwind/react": "^2.1.0",
     "@tailwindcss/forms": "^0.5.7",
     "autoprefixer": "^10.4.15",
+    "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "faker": "5.5.3",
     "lucide-react": "^0.268.0",
@@ -22,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-player": "^2.13.0",
     "react-router-dom": "^6.15.0",
+    "react-toastify": "^9.1.3",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animated": "^1.0.1"
   },
