--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.2",
     "chart.js": "^4.4.0",
     "faker": "5.5.3",
+    "file-saver": "^2.0.5",
     "lucide-react": "^0.268.0",
     "postcss": "^8.4.28",
     "react": "^18.2.0",
